[package]
name = "domore"
version = "0.1.0"
edition = "2021"
description = "domore is used to do more, to parallelize something. Execute any command in parallel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
